@@ -4875,25 +4875,15 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-operator|!
-name|enableLazyFieldLoading
-operator|||
 name|fields
-operator|==
+operator|!=
 literal|null
 condition|)
 block|{
-name|d
-operator|=
-name|reader
-operator|.
-name|document
-argument_list|(
-name|i
-argument_list|)
-expr_stmt|;
-block|}
-else|else
+if|if
+condition|(
+name|enableLazyFieldLoading
+condition|)
 block|{
 specifier|final
 name|SetNonLazyFieldSelector
@@ -4923,6 +4913,55 @@ operator|=
 name|visitor
 operator|.
 name|doc
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|documentCache
+operator|==
+literal|null
+condition|)
+block|{
+name|d
+operator|=
+name|reader
+operator|.
+name|document
+argument_list|(
+name|i
+argument_list|,
+name|fields
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// we do not pass the fields in this case because that would return an incomplete document which would
+comment|// be eventually cached. The alternative would be to read the stored fields twice; once with the fields
+comment|// and then without for caching leading to a performance hit
+comment|// see SOLR-8858 for related discussion
+name|d
+operator|=
+name|reader
+operator|.
+name|document
+argument_list|(
+name|i
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|d
+operator|=
+name|reader
+operator|.
+name|document
+argument_list|(
+name|i
+argument_list|)
 expr_stmt|;
 block|}
 if|if
