@@ -128,6 +128,9 @@ Bug Fixes
   is introduced (defaults to true) to send version ranges instead of individual versions for peer sync.
   (Pushkar Raste, shalin)
 
+* SOLR-8858: SolrIndexSearcher#doc() completely ignores field filters unless lazy field loading is enabled.
+  (Caleb Rackliffe, David Smiley, shalin)
+
 Optimizations
 ----------------------
 
